--- a/index.html
+++ b/index.html
@@ -1,124 +1,129 @@
 <!DOCTYPE html>
 <html lang="fa">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>سوپرمارکت سروش</title>
 
     <!-- bootstrap css -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
+      crossorigin="anonymous"
+    />
 
     <!-- slick css -->
     <link rel="stylesheet" href="./src/slick/slick.css" />
     <link rel="stylesheet" href="./src/slick/slick-theme.css" />
 
     <!-- main css -->
-    <link rel="stylesheet" href="./src/css/mainStyle.css">
+    <link rel="stylesheet" href="./src/css/mainStyle.css" />
 
     <!-- responsive css -->
-    <link rel="stylesheet" href="./src/css/responsive.css">
-</head>
+    <link rel="stylesheet" href="./src/css/responsive.css" />
+  </head>
 
-<body>
-
+  <body>
     <header>
-        <div class="top-big-slider">
-            <div id="slider-top" class="h-100 w-100">
-                <div class="top-big-slider__item">
-                    <div class="top-big-slider__item__inner">
-                        <div class="d-flex flex-column align-items-center" style="width: 520px;">
-                            <h1>به سوپرمارکت زنجیره‌ای سروش خوش آمدید</h1>
-                            <h3>
-                                ارسال سفارش 8 صبح تا 10 شب فقط در شیراز
-                            </h3>
-                            <h3>
-                                شما در حال خرید از شعبه
-                                <span class="text--orange">
-                                    چنچنه
-                                </span>
-                                هستید
-                            </h3>
+      <div class="top-big-slider">
+        <div id="slider-top" class="h-100 w-100">
+          <div class="top-big-slider__item">
+            <div class="top-big-slider__item__inner">
+              <div
+                class="d-flex flex-column align-items-center"
+                style="width: 520px"
+              >
+                <h1>به سوپرمارکت زنجیره‌ای سروش خوش آمدید</h1>
+                <h3>ارسال سفارش 8 صبح تا 10 شب فقط در شیراز</h3>
+                <h3>
+                  شما در حال خرید از شعبه
+                  <span class="text--orange"> چنچنه </span>
+                  هستید
+                </h3>
 
-                            <div class="top-big-slider__item__select-cont">
-                                <img class="" src="./src/img/shop.svg" alt="">
-                                <select name="" id="" class="custom--select">
-                                    <option value="">انتخاب شعبه</option>
-                                    <option value="">انتخاب شعبه</option>
-                                </select>
-                                <div class="custom--select--bg"></div>
-                            </div>
-
-                            <div class="top-big-slider__item__btn-cont">
-                                <button class="btn--black text--orange btn btn-dark px-5">بزن بریم خرید</button>
-                            </div>
-                        </div>
-                    </div>
+                <div class="top-big-slider__item__select-cont">
+                  <img class="" src="./src/img/shop.svg" alt="" />
+                  <select name="" id="" class="custom--select">
+                    <option value="">انتخاب شعبه</option>
+                    <option value="">انتخاب شعبه</option>
+                  </select>
+                  <div class="custom--select--bg"></div>
                 </div>
-                <div class="top-big-slider__item">
-                    <div class="top-big-slider__item__inner">
-                        <div class="d-flex flex-column align-items-center" style="width: 520px;">
-                            <h1>به سوپرمارکت زنجیره‌ای سروش خوش آمدید</h1>
-                            <h3>
-                                ارسال سفارش 8 صبح تا 10 شب فقط در شیراز
-                            </h3>
-                            <h3>
-                                شما در حال خرید از شعبه
-                                <span class="text--orange">
-                                    چنچنه
-                                </span>
-                                هستید
-                            </h3>
 
-                            <div class="top-big-slider__item__select-cont">
-                                <img class="" src="./src/img/shop.svg" alt="">
-                                <select name="" id="" class="custom--select">
-                                    <option value="">انتخاب شعبه</option>
-                                    <option value="">انتخاب شعبه</option>
-                                </select>
-                                <div class="custom--select--bg"></div>
-                            </div>
-
-                            <div class="top-big-slider__item__btn-cont">
-                                <button class="btn--black text--orange btn btn-dark px-5">بزن بریم خرید</button>
-                            </div>
-                        </div>
-                    </div>
+                <div class="top-big-slider__item__btn-cont">
+                  <button class="btn--black text--orange btn btn-dark px-5">
+                    بزن بریم خرید
+                  </button>
                 </div>
-                <div class="top-big-slider__item">
-                    <div class="top-big-slider__item__inner">
-                        <div class="d-flex flex-column align-items-center" style="width: 520px;">
-                            <h1>به سوپرمارکت زنجیره‌ای سروش خوش آمدید</h1>
-                            <h3>
-                                ارسال سفارش 8 صبح تا 10 شب فقط در شیراز
-                            </h3>
-                            <h3>
-                                شما در حال خرید از شعبه
-                                <span class="text--orange">
-                                    چنچنه
-                                </span>
-                                هستید
-                            </h3>
-
-                            <div class="top-big-slider__item__select-cont">
-                                <img class="" src="./src/img/shop.svg" alt="">
-                                <select name="" id="" class="custom--select">
-                                    <option value="">انتخاب شعبه</option>
-                                    <option value="">انتخاب شعبه</option>
-                                </select>
-                                <div class="custom--select--bg"></div>
-                            </div>
-
-                            <div class="top-big-slider__item__btn-cont">
-                                <button class="btn--black text--orange btn btn-dark px-5">بزن بریم خرید</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+              </div>
             </div>
-            <div class="top-big-slider__bottom">
-                <!-- <svg class="d-none d-md-block" xmlns="http://www.w3.org/2000/svg" width="1923.146"
+          </div>
+          <div class="top-big-slider__item">
+            <div class="top-big-slider__item__inner">
+              <div
+                class="d-flex flex-column align-items-center"
+                style="width: 520px"
+              >
+                <h1>به سوپرمارکت زنجیره‌ای سروش خوش آمدید</h1>
+                <h3>ارسال سفارش 8 صبح تا 10 شب فقط در شیراز</h3>
+                <h3>
+                  شما در حال خرید از شعبه
+                  <span class="text--orange"> چنچنه </span>
+                  هستید
+                </h3>
+
+                <div class="top-big-slider__item__select-cont">
+                  <img class="" src="./src/img/shop.svg" alt="" />
+                  <select name="" id="" class="custom--select">
+                    <option value="">انتخاب شعبه</option>
+                    <option value="">انتخاب شعبه</option>
+                  </select>
+                  <div class="custom--select--bg"></div>
+                </div>
+
+                <div class="top-big-slider__item__btn-cont">
+                  <button class="btn--black text--orange btn btn-dark px-5">
+                    بزن بریم خرید
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="top-big-slider__item">
+            <div class="top-big-slider__item__inner">
+              <div
+                class="d-flex flex-column align-items-center"
+                style="width: 520px"
+              >
+                <h1>به سوپرمارکت زنجیره‌ای سروش خوش آمدید</h1>
+                <h3>ارسال سفارش 8 صبح تا 10 شب فقط در شیراز</h3>
+                <h3>
+                  شما در حال خرید از شعبه
+                  <span class="text--orange"> چنچنه </span>
+                  هستید
+                </h3>
+
+                <div class="top-big-slider__item__select-cont">
+                  <img class="" src="./src/img/shop.svg" alt="" />
+                  <select name="" id="" class="custom--select">
+                    <option value="">انتخاب شعبه</option>
+                    <option value="">انتخاب شعبه</option>
+                  </select>
+                  <div class="custom--select--bg"></div>
+                </div>
+
+                <div class="top-big-slider__item__btn-cont">
+                  <button class="btn--black text--orange btn btn-dark px-5">
+                    بزن بریم خرید
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="top-big-slider__bottom">
+          <!-- <svg class="d-none d-md-block" xmlns="http://www.w3.org/2000/svg" width="1923.146"
                     viewBox="0 0 1923.146 175"
                     style="width: 100%; position: absolute; bottom: 0;transform: rotate(180deg);">
                     <defs>
@@ -133,20 +138,13 @@
                     <path id="Path_1" data-name="Path 1" d="M0,0C974.5,243.625,1922.9,0,1922.9,0"
                         transform="translate(0.121 0.485)" fill="url(#grad1)" stroke="" stroke-width=""></path>
                 </svg> -->
-            </div>
-
         </div>
+      </div>
     </header>
 
-    <main>
+    <main style="height: 500px">sadfads</main>
 
-    </main>
-
-    <footer>
-
-    </footer>
-
-
+    <footer></footer>
 
     <script src="./src//js/jquery-3.3.1.min.js"></script>
 
@@ -154,8 +152,6 @@
 
     <script src="./src/js/index-slider.js"></script>
 
-    <!-- <script src="./src/js/index-slider.js"></script> -->
-
-</body>
-
+    <script src="./src/js/index.js"></script>
+  </body>
 </html>
