--- a/index.html
+++ b/index.html
@@ -263,9 +263,9 @@
                             <div class="card--medium">
                                 <img src="./src/img/035-meat.svg" alt="" />
                                 <div class="font-weight-bold text-center" style="font-size: 0.8em">
-                                    تن ماهی در روغن گیاهی 180 گرمی
+                                    تن ماهی در روغن گیاهی ۱۸۰ گرمی
                                 </div>
-                                <div class="font-weight-bold text-center">تحفه</div>
+                                <div class="text-center">تحفه</div>
                                 <div class="text-muted">
                                     <span>غذاهای آماده</span>
                                     <span class="mx-lg-2 mx-1"> > </span>
@@ -300,9 +300,9 @@
                             <div class="card--medium">
                                 <img src="./src/img/035-meat.svg" alt="" />
                                 <div class="font-weight-bold text-center" style="font-size: 0.8em">
-                                    تن ماهی در روغن گیاهی 180 گرمی
+                                    تن ماهی در روغن گیاهی ۱۸۰ گرمی
                                 </div>
-                                <div class="font-weight-bold text-center">تحفه</div>
+                                <div class="text-center">تحفه</div>
                                 <div class="text-muted">
                                     <span>غذاهای آماده</span>
                                     <span class="mx-lg-2 mx-1"> > </span>
@@ -334,9 +334,9 @@
                             <div class="card--medium">
                                 <img src="./src/img/035-meat.svg" alt="" />
                                 <div class="font-weight-bold text-center" style="font-size: 0.8em">
-                                    تن ماهی در روغن گیاهی 180 گرمی
+                                    تن ماهی در روغن گیاهی ۱۸۰ گرمی
                                 </div>
-                                <div class="font-weight-bold text-center">تحفه</div>
+                                <div class="text-center">تحفه</div>
                                 <div class="text-muted">
                                     <span>غذاهای آماده</span>
                                     <span class="mx-lg-2 mx-1"> > </span>
@@ -368,9 +368,9 @@
                             <div class="card--medium">
                                 <img src="./src/img/035-meat.svg" alt="" />
                                 <div class="font-weight-bold text-center" style="font-size: 0.8em">
-                                    تن ماهی در روغن گیاهی 180 گرمی
+                                    تن ماهی در روغن گیاهی ۱۸۰ گرمی
                                 </div>
-                                <div class="font-weight-bold text-center">تحفه</div>
+                                <div class="text-center">تحفه</div>
                                 <div class="text-muted">
                                     <span>غذاهای آماده</span>
                                     <span class="mx-lg-2 mx-1"> > </span>
@@ -402,9 +402,9 @@
                             <div class="card--medium">
                                 <img src="./src/img/035-meat.svg" alt="" />
                                 <div class="font-weight-bold text-center" style="font-size: 0.8em">
-                                    تن ماهی در روغن گیاهی 180 گرمی
+                                    تن ماهی در روغن گیاهی ۱۸۰ گرمی
                                 </div>
-                                <div class="font-weight-bold text-center">تحفه</div>
+                                <div class="text-center">تحفه</div>
                                 <div class="text-muted">
                                     <span>غذاهای آماده</span>
                                     <span class="mx-lg-2 mx-1"> > </span>
@@ -436,9 +436,9 @@
                             <div class="card--medium">
                                 <img src="./src/img/035-meat.svg" alt="" />
                                 <div class="font-weight-bold text-center" style="font-size: 0.8em">
-                                    تن ماهی در روغن گیاهی 180 گرمی
+                                    تن ماهی در روغن گیاهی ۱۸۰ گرمی
                                 </div>
-                                <div class="font-weight-bold text-center">تحفه</div>
+                                <div class="text-center">تحفه</div>
                                 <div class="text-muted">
                                     <span>غذاهای آماده</span>
                                     <span class="mx-lg-2 mx-1"> > </span>
@@ -489,9 +489,9 @@
                             <div class="card--medium">
                                 <img src="./src/img/035-meat.svg" alt="" />
                                 <div class="font-weight-bold text-center" style="font-size: 0.8em">
-                                    تن ماهی در روغن گیاهی 180 گرمی
+                                    تن ماهی در روغن گیاهی ۱۸۰ گرمی
                                 </div>
-                                <div class="font-weight-bold text-center">تحفه</div>
+                                <div class="text-center">تحفه</div>
                                 <div class="text-muted">
                                     <span>غذاهای آماده</span>
                                     <span class="mx-lg-2 mx-1"> > </span>
@@ -526,9 +526,9 @@
                             <div class="card--medium">
                                 <img src="./src/img/035-meat.svg" alt="" />
                                 <div class="font-weight-bold text-center" style="font-size: 0.8em">
-                                    تن ماهی در روغن گیاهی 180 گرمی
+                                    تن ماهی در روغن گیاهی ۱۸۰ گرمی
                                 </div>
-                                <div class="font-weight-bold text-center">تحفه</div>
+                                <div class="text-center">تحفه</div>
                                 <div class="text-muted">
                                     <span>غذاهای آماده</span>
                                     <span class="mx-lg-2 mx-1"> > </span>
@@ -560,9 +560,9 @@
                             <div class="card--medium">
                                 <img src="./src/img/035-meat.svg" alt="" />
                                 <div class="font-weight-bold text-center" style="font-size: 0.8em">
-                                    تن ماهی در روغن گیاهی 180 گرمی
+                                    تن ماهی در روغن گیاهی ۱۸۰ گرمی
                                 </div>
-                                <div class="font-weight-bold text-center">تحفه</div>
+                                <div class="text-center">تحفه</div>
                                 <div class="text-muted">
                                     <span>غذاهای آماده</span>
                                     <span class="mx-lg-2 mx-1"> > </span>
@@ -594,9 +594,9 @@
                             <div class="card--medium">
                                 <img src="./src/img/035-meat.svg" alt="" />
                                 <div class="font-weight-bold text-center" style="font-size: 0.8em">
-                                    تن ماهی در روغن گیاهی 180 گرمی
+                                    تن ماهی در روغن گیاهی ۱۸۰ گرمی
                                 </div>
-                                <div class="font-weight-bold text-center">تحفه</div>
+                                <div class="text-center">تحفه</div>
                                 <div class="text-muted">
                                     <span>غذاهای آماده</span>
                                     <span class="mx-lg-2 mx-1"> > </span>
@@ -628,9 +628,9 @@
                             <div class="card--medium">
                                 <img src="./src/img/035-meat.svg" alt="" />
                                 <div class="font-weight-bold text-center" style="font-size: 0.8em">
-                                    تن ماهی در روغن گیاهی 180 گرمی
+                                    تن ماهی در روغن گیاهی ۱۸۰ گرمی
                                 </div>
-                                <div class="font-weight-bold text-center">تحفه</div>
+                                <div class="text-center">تحفه</div>
                                 <div class="text-muted">
                                     <span>غذاهای آماده</span>
                                     <span class="mx-lg-2 mx-1"> > </span>
@@ -662,9 +662,9 @@
                             <div class="card--medium">
                                 <img src="./src/img/035-meat.svg" alt="" />
                                 <div class="font-weight-bold text-center" style="font-size: 0.8em">
-                                    تن ماهی در روغن گیاهی 180 گرمی
+                                    تن ماهی در روغن گیاهی ۱۸۰ گرمی
                                 </div>
-                                <div class="font-weight-bold text-center">تحفه</div>
+                                <div class="text-center">تحفه</div>
                                 <div class="text-muted">
                                     <span>غذاهای آماده</span>
                                     <span class="mx-lg-2 mx-1"> > </span>
@@ -958,7 +958,7 @@
                         </div>
                         <div class="text-center">
                             <div class="font-weight-bold ">
-                                تن ماهی در روغن گیاهی 180 گرمی
+                                تن ماهی در روغن گیاهی ۱۸۰ گرمی
                             </div>
                             <div class="font-weight-bold ">تحفه</div>
                             <div class="text-muted" style="font-size: .85em;">
@@ -993,7 +993,7 @@
                         </div>
                         <div class="text-center">
                             <div class="font-weight-bold ">
-                                تن ماهی در روغن گیاهی 180 گرمی
+                                تن ماهی در روغن گیاهی ۱۸۰ گرمی
                             </div>
                             <div class="font-weight-bold ">تحفه</div>
                             <div class="text-muted" style="font-size: .85em;">
@@ -1033,7 +1033,7 @@
 
         </div>
 
-        <div class="left-cart--desktop__btn">
+        <div class="left-cart--desktop__btn removedX--n2">
             <div class="align-self-center">
                 <img src="./src/img/shopping-cart.svg" alt="" class="cart">
             </div>
@@ -1126,7 +1126,7 @@
                             </div>
                             <div class="text-center">
                                 <div class="font-weight-bold ">
-                                    تن ماهی در روغن گیاهی 180 گرمی
+                                    تن ماهی در روغن گیاهی ۱۸۰ گرمی
                                 </div>
                                 <div class="font-weight-bold ">تحفه</div>
                                 <div class="text-muted" style="font-size: .85em;">
@@ -1161,7 +1161,7 @@
                             </div>
                             <div class="text-center">
                                 <div class="font-weight-bold ">
-                                    تن ماهی در روغن گیاهی 180 گرمی
+                                    تن ماهی در روغن گیاهی ۱۸۰ گرمی
                                 </div>
                                 <div class="font-weight-bold ">تحفه</div>
                                 <div class="text-muted" style="font-size: .85em;">
