--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <div id="slider-top" class="h-100 w-100">
                     <div class="top-big-slider__item">
                         <div class="top-big-slider__item__inner">
-                            <div class="d-flex flex-column align-items-center" style="width: 520px">
+                            <div class="d-flex flex-column align-items-center" style="width: 520px; margin-top: -25vh;">
                                 <h1>به سوپرمارکت زنجیره‌ای سروش خوش آمدید</h1>
                                 <h3>ارسال سفارش 8 صبح تا 10 شب فقط در شیراز</h3>
                                 <h3>
@@ -57,7 +57,7 @@
                     </div>
                     <div class="top-big-slider__item">
                         <div class="top-big-slider__item__inner">
-                            <div class="d-flex flex-column align-items-center" style="width: 520px">
+                            <div class="d-flex flex-column align-items-center" style="width: 520px; margin-top: -25vh;">
                                 <h1>به سوپرمارکت زنجیره‌ای سروش خوش آمدید</h1>
                                 <h3>ارسال سفارش 8 صبح تا 10 شب فقط در شیراز</h3>
                                 <h3>
@@ -85,7 +85,7 @@
                     </div>
                     <div class="top-big-slider__item">
                         <div class="top-big-slider__item__inner">
-                            <div class="d-flex flex-column align-items-center" style="width: 520px">
+                            <div class="d-flex flex-column align-items-center" style="width: 520px; margin-top: -25vh;">
                                 <h1>به سوپرمارکت زنجیره‌ای سروش خوش آمدید</h1>
                                 <h3>ارسال سفارش 8 صبح تا 10 شب فقط در شیراز</h3>
                                 <h3>
@@ -238,7 +238,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="border-bottom--cirle mx-n5 d-none d-lg-block"></div>
+                <div class="border-bottom--cirle mx-n5 mx-lg-none mb-lg-0 mt-lg-5 d-none d-lg-block"></div>
             </section>
 
             <section>
@@ -716,7 +716,15 @@
                                     مشاهده اطلاعات دیگر شعب
                                 </div>
                             </div>
-                            <div>></div>
+                            <div class="left-2">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="11.747" height="21.495" viewBox="0 0 11.747 21.495">
+                                    <g>
+                                        <g>
+                                            <path fill="none" stroke="#68645b" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="2px" d="M18.667 0L9.333 9.333 0 0" transform="translate(1 1.414) rotate(90 4.667 4.667)"/>
+                                        </g>
+                                    </g>
+                                </svg>
+                            </div>
                         </div>
                         <div class="card--curved">
                             <div>
@@ -728,7 +736,15 @@
                                     مشاهده اطلاعات دیگر شعب
                                 </div>
                             </div>
-                            <div>></div>
+                             <div class="left-2">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="11.747" height="21.495" viewBox="0 0 11.747 21.495">
+                                    <g>
+                                        <g>
+                                            <path fill="none" stroke="#68645b" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="2px" d="M18.667 0L9.333 9.333 0 0" transform="translate(1 1.414) rotate(90 4.667 4.667)"/>
+                                        </g>
+                                    </g>
+                                </svg>
+                            </div>
                         </div>
                         <div class="card--curved">
                             <div>
@@ -740,7 +756,15 @@
                                     مشاهده اطلاعات دیگر شعب
                                 </div>
                             </div>
-                            <div>></div>
+                             <div class="left-2">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="11.747" height="21.495" viewBox="0 0 11.747 21.495">
+                                    <g>
+                                        <g>
+                                            <path fill="none" stroke="#68645b" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="2px" d="M18.667 0L9.333 9.333 0 0" transform="translate(1 1.414) rotate(90 4.667 4.667)"/>
+                                        </g>
+                                    </g>
+                                </svg>
+                            </div>
                         </div>
                         <div class="card--curved">
                             <div>
@@ -752,7 +776,15 @@
                                     مشاهده اطلاعات دیگر شعب
                                 </div>
                             </div>
-                            <div>></div>
+                             <div class="left-2">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="11.747" height="21.495" viewBox="0 0 11.747 21.495">
+                                    <g>
+                                        <g>
+                                            <path fill="none" stroke="#68645b" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="2px" d="M18.667 0L9.333 9.333 0 0" transform="translate(1 1.414) rotate(90 4.667 4.667)"/>
+                                        </g>
+                                    </g>
+                                </svg>
+                            </div>
                         </div>
                         <div class="card--curved">
                             <div>
@@ -764,7 +796,15 @@
                                     مشاهده اطلاعات دیگر شعب
                                 </div>
                             </div>
-                            <div>></div>
+                             <div class="left-2">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="11.747" height="21.495" viewBox="0 0 11.747 21.495">
+                                    <g>
+                                        <g>
+                                            <path fill="none" stroke="#68645b" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="2px" d="M18.667 0L9.333 9.333 0 0" transform="translate(1 1.414) rotate(90 4.667 4.667)"/>
+                                        </g>
+                                    </g>
+                                </svg>
+                            </div>
                         </div>
                         <div class="card--curved">
                             <div>
@@ -776,7 +816,15 @@
                                     مشاهده اطلاعات دیگر شعب
                                 </div>
                             </div>
-                            <div>></div>
+                             <div class="left-2">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="11.747" height="21.495" viewBox="0 0 11.747 21.495">
+                                    <g>
+                                        <g>
+                                            <path fill="none" stroke="#68645b" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="2px" d="M18.667 0L9.333 9.333 0 0" transform="translate(1 1.414) rotate(90 4.667 4.667)"/>
+                                        </g>
+                                    </g>
+                                </svg>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -958,7 +1006,7 @@
                         </div>
                         <div class="text-center">
                             <div class="font-weight-bold ">
-                                تن ماهی در روغن گیاهی ۱۸۰ گرمی
+                                تن ماهی در روغن 
                             </div>
                             <div class="font-weight-bold ">تحفه</div>
                             <div class="text-muted" style="font-size: .85em;">
@@ -1021,7 +1069,7 @@
                 <div class="font-size--1 text-center font-weight-bold text--orange mb-3">خرید باید بیشتر از 50 هزار
                     تومان باشد</div>
                 <div
-                    class="left-cart--desktop__footer text--orange font-size--1 d-flex align-items-center justify-content-around">
+                    class="left-cart--desktop__footer text--orange font-size--1 d-flex align-items-center justify-content-between pr-4 pl-2">
                     <div class="text-white">
                         <span class="font-weight-bold font-size--2">۸۷۳۰۰</span>
                         <span> تومان</span>
@@ -1126,7 +1174,7 @@
                             </div>
                             <div class="text-center">
                                 <div class="font-weight-bold ">
-                                    تن ماهی در روغن گیاهی ۱۸۰ گرمی
+                                    تن ماهی در روغن گیاهی 
                                 </div>
                                 <div class="font-weight-bold ">تحفه</div>
                                 <div class="text-muted" style="font-size: .85em;">
@@ -1161,7 +1209,7 @@
                             </div>
                             <div class="text-center">
                                 <div class="font-weight-bold ">
-                                    تن ماهی در روغن گیاهی ۱۸۰ گرمی
+                                    تن ماهی در روغن گیاهی 
                                 </div>
                                 <div class="font-weight-bold ">تحفه</div>
                                 <div class="text-muted" style="font-size: .85em;">
@@ -1189,7 +1237,7 @@
                     <div class="font-size--1 text-center font-weight-bold text--orange mb-3">خرید باید بیشتر از 50 هزار
                         تومان باشد</div>
                     <div
-                        class="left-cart--desktop__footer text--orange font-size--1 d-flex align-items-center justify-content-around">
+                        class="left-cart--desktop__footer text--orange font-size--1 d-flex align-items-center justify-content-between pr-4 pl-1">
                         <div class="text-white">
                             <span class="font-weight-bold font-size--2">۸۷۳۰۰</span>
                             <span> تومان</span>
